<resources>
    <string name="app_name">ManyLanguage</string>
    <string name="txt_login">Login</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_telephone_number">Telephone Number</string>
    <string name="txt_hello">Hello</string>
    <string name="choose_language">Choose Language</string>
    <string name="remember_information">Remember Information</string>
    <string name="txt_register">Register</string>
    <string name="txt_back">Back</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_forgot_your_password">Forgot Your Password?</string>
    <string name="txt_don_t_have_an_account">Don\'t have an account:</string>
    <string name="txt_register_here">Register here!</string>
    <string name="txt_ok">OK</string>
    <string name="txt_dang_ky_thanh_cong">Register Succesful!</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_favourite">Favourite</string>
    <string name="txt_home">Home</string>
    <string name="txt_sort">Sort</string>

    <!--Start Toast notification-->
    <string name="toast_account_already_exists">Account already exists</string>
    <string name="toast_not_enough_information">You have not entered enough information</string>
    <string name="toast_wrong_account_infomation">Wrong account information</string>
    <string name="toast_check_null">Information is null</string>
    <string name="toast_wrong_password">Wrong Password!</string>
    <!--End Toast notification-->

    <!--Start title tool bar-->
    <string name="title_control_account">Control Account</string>
    <string name="title_home">Home</string>
    <!--End title tool bar-->
</resources>
