<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rlChooseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/txtLanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/choose_language" />

        <ImageButton
            android:id="@+id/imgButtonDropDown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/txtLanguage"
            android:background="@drawable/ic_arrow_drop_down_black_24dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="#FF0000"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/txt_username"
        android:inputType="text"/>

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_security_black_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/txt_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_edittext"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawablePadding="5dp"
        android:hint="@string/txt_telephone_number"
        android:inputType="number" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp">

        <CheckBox
            android:id="@+id/checkBoxInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/txtRememberInfo" />

        <TextView
            android:id="@+id/txtRememberInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/remember_information" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_button_login"
        android:text="@string/txt_login"
        android:textColor="#FFFF00"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt_forgot_your_password" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_don_t_have_an_account" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/txtNoAccount"
            android:text="@string/txt_register_here"
            android:textColor="#FF0000" />

    </RelativeLayout>

</LinearLayout>